--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@
 
 
   body {
-    margin-top: 50px;
     margin: 0;
     padding: 0;
     background: #f4f4f4;
+    padding-top: 40px;
   }
   
   /* Stile titolo */
